# project-Group12

./: EDA.ipynb  LICENSE  Makefile  README.md  _config.yml  _toc.yml  adoption_days.ipynb  conf.py  environment.yml  main.ipynb  modeling.ipynb  outcomes.ipynb  requirements.txt
Michelle/: EDA.ipynb
_build/.doctrees/: README.doctree  adoption_days.doctree  environment.pickle  main.doctree  outcomes.doctree
_build/.doctrees/Michelle/: EDA.doctree
_build/.doctrees/sheltertools/: README.doctree
_build/html/: .buildinfo  README.html  adoption_days.html  genindex.html  main.html  objects.inv  outcomes.html  project-description.html  search.html  searchindex.js
_build/html/.doctrees/: environment.pickle  project-description.doctree
_build/html/Michelle/: EDA.html
_build/html/_sources/: README.md  adoption_days.ipynb
_build/html/sheltertools/: README.html
_build/jupyter_execute/: adoption_days.ipynb  main.ipynb  outcomes.ipynb
_build/jupyter_execute/Michelle/: EDA.ipynb
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
model_results/: CatPredictions.pickle
sheltertools/: __init__.py  setup.cfg  utils.py
sheltertools/tests/: test_utils.py
