# configuration for setup.py


[metadata]
name             = sheltertools
version          = attr: sheltertools.__version__
author           = Ligo Scientific Collaboration (LSC) and Group 12 - Sarah Song, Michelle Lin, Florence Thin
author_email     = sasong@berkeley.edu, lin.michelle@berkeley.edu, kthin3@berkeley.edu
description      = Tools for reading shelters data
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
keywords         = tools, ligo
license          = BSD 3-Clause License
classifiers      =
	Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
# These should be consistent with what is specified in the environment.yml
python_requires  = >= 3.8,
install_requires =
	numpy=1.23
	h5py=3.7
	matplotlib=3.5
	ipython=8.2
	ipykernel=5.5
	decorator=5.1
	scipy=1.8

[options.packages.find]
exclude =
    examples*
    docs*